[package]
name = "heartbeat-sim"
version = "0.1.0"
authors = ["Jimmy Chu <jimmychu0807@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3" }
futures-timer = { version = "3.0.2" }
tokio = { version = "0.3", features = ["full"] }
